# rust-pds

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  TODOS.md  dist-workspace.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  lexicon-drift.yml  release.yml
docs/: deploy-cloudflare-tunnel-token.md  deploy-coolify.md
rust-core/: Cargo.toml
rust-core/examples/: server_footprint.rs
rust-core/src/: error.rs  lib.rs  task.rs
rust-core/src/auth/: jwt.rs  mod.rs  service_auth.rs
rust-core/src/firehose/: frame.rs  mod.rs  tail.rs
rust-core/src/identity/: mod.rs  plc.rs  service.rs  web.rs
rust-core/src/oauth/: client.rs  device.rs  dpop.rs  jwk.rs  jws.rs  metadata.rs  mod.rs  pkce.rs  request.rs  scope.rs  store.rs  token.rs
rust-core/src/repo/: error.rs  mod.rs  util.rs  writer.rs
rust-core/src/server/: appview.rs  firehose_ws.rs  mod.rs  repo.rs
rust-core/src/storage/: adapter.rs  backup.rs  block_store.rs  concurrency.rs  conformance.rs  crypto.rs  db.rs  keys.rs  mod.rs  schema.rs  traits.rs
rust-core/src/storage/memory/: mod.rs
rust-core/src/storage/sqlite/: account.rs  backup.rs  blob.rs  keys.rs  mod.rs  oauth.rs  repo.rs  schema.rs
rust-pds/: Cargo.toml  DEMO.md
rust-pds/src/: config.rs  detect.rs  dns.rs  keychain.rs  lib.rs  main.rs  proxy_snippet.rs  tls.rs
rust-pds/src/auth/: extractor.rs  mod.rs
rust-pds/src/cmd/: admin.rs  export_keys.rs  import_keys.rs  init.rs  keychain.rs  mod.rs  serve.rs
rust-pds/src/firehose/: crawl.rs  mod.rs  subscribe.rs
rust-pds/src/identity/: mod.rs  web_resolver.rs
rust-pds/src/identity/plc/: mod.rs  reqwest_client.rs
rust-pds/src/xrpc/: error.rs  identity.rs  mod.rs  preferences.rs  repo.rs  server.rs
rust-pds/src/xrpc/appview/: client.rs  mod.rs  proxy.rs  resolver.rs  service_auth.rs
rust-pds/src/xrpc/oauth/: authorize.rs  client_resolver.rs  error.rs  html.rs  jwks.rs  metadata.rs  mod.rs  par.rs  revoke.rs  token.rs
rust-pds/tests/: firehose_ws.rs  oauth_flow.rs
rust-worker/: Cargo.toml  NEXT-SESSION.md  SIGN-IN-WITH-STELYPH.md  wrangler.toml
rust-worker/.cargo/: config.toml
rust-worker/src/: durable.rs  handlers.rs  lib.rs  plc.rs  register.rs  registry.rs  schema.rs  sequencer.rs  store.rs
scripts/: check-lexicon-drift.sh  local-verify.sh  setup-cloudflare-tunnel-token.sh  setup-cloudflare-tunnel.sh
