[workspace]
members = ["rust-core", "rust-pds"]
# wasm32-only; building it for the host (as `cargo test --workspace` would)
# cannot work, so it is excluded and built via its own manifest.
exclude = ["rust-worker"]
resolver = "2"

[workspace.dependencies]
atrium-repo = "0.1.8"
atrium-crypto = "0.1.3"
atrium-api = "0.25.8"
cid = "0.11"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.6"
ipld-core = "0.4"
rusqlite = { version = "0.37.0", features = ["bundled", "backup"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
