[package]
name = "stelyph-core"
version = "0.1.0-alpha.3"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
description = "Device-portable AT Protocol core: signed repo/MST engine, crypto, dag-cbor/CAR, and storage — no HTTP server. Compiles for aarch64-apple-ios."
repository = "https://github.com/Spirallex/rust-pds"

[lib]
name = "stelyph_core"

[dependencies]
# --- atproto core (pure Rust) ---
atrium-repo = { workspace = true }
atrium-crypto = { workspace = true }
atrium-api = { workspace = true }
cid = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
ipld-core = { workspace = true }
# Non-optional: repo::util's JSON→IPLD bridge needs it, and jsonwebtoken already
# pulls it into every build (device included), so this adds nothing new.
serde_json = "1"
iroh-car = "0.5.1"
data-encoding = "2"

# --- storage (SQLite is C but `bundled` compiles in-tree for iOS) ---
# Optional so the `sqlite` feature can be turned off: the trait-based storage
# layer (src/storage/traits.rs) lets a host run on MemoryStore alone, which is
# what a target that cannot link a C SQLite — notably wasm32 — needs.
rusqlite = { workspace = true, optional = true }
tokio-rusqlite = { version = "0.7.0", optional = true }
deadpool-sqlite = { version = "0.12.1", features = ["rt_tokio_1"], optional = true }
chrono = "0.4"

# --- keystore + auth crypto (pure Rust RustCrypto) ---
# p256 is already in the tree via atrium-crypto; named directly here because the
# OAuth authorization server needs ES256 signing (token + JWKS) and raw
# coordinate access for RFC 7638 JWK thumbprints, neither of which atrium-crypto
# exposes. k256 likewise, for verifying ES256K DPoP proofs.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
k256 = { version = "0.13", features = ["ecdsa"] }
# OAuth `client_id`s are URLs with strict structural rules (no fragment, no
# credentials, no non-default port, hostname must not be an IP). Hand-rolling
# that parsing is exactly the sort of thing that yields a redirect-URI bypass,
# so use the real parser. Already in the tree via reqwest.
url = "2.5"
argon2 = { version = "0.5.3", features = ["zeroize"] }
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
zeroize = "1"
rand = "0.8"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
uuid = { version = "1", features = ["v4"] }

# --- runtime + misc ---
tokio = { version = "1.52", features = ["sync", "rt", "macros"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"

# --- embedded-server feature only (minimal in-process hyper host) ---
# Versions are pinned to what the workspace already resolves (reqwest/axum pull
# the same hyper 1.x tree), so enabling the feature adds no new major versions.
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
# MST prefix streams (`entries_prefixed`) are futures Streams; util-only, no exec.
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
# RFC 6455 handshake accept key is SHA-1 by spec (subscribeRepos WS host only).
sha1 = { version = "0.10", optional = true }
# Only pulled in when the `testing` feature is on (in-memory store + seed helpers
# for downstream test suites). Kept out of production/device builds.
tempfile = { version = "3", optional = true }

[features]
default = ["sqlite"]

# The SQLite storage backend. On by default — it is what every current host
# uses. Turning it off drops rusqlite/tokio-rusqlite/deadpool-sqlite (and the C
# SQLite they bundle) and leaves `MemoryStore` as the only backend, which is the
# configuration a wasm32 target needs. Both backends implement the same traits
# and are held to the same behaviour by `storage::conformance`.
#
# `MemoryStore` has no feature gate: it is pure Rust with no extra dependencies,
# and the conformance suite needs it present in every configuration to have
# something to compare the SQLite backend against.
sqlite = ["dep:rusqlite", "dep:tokio-rusqlite", "dep:deadpool-sqlite"]

# Exposes in-memory store construction and account/invite seed helpers for use
# by downstream crates' test suites (the server enables this via dev-deps).
testing = ["dep:tempfile"]

# Lower argon2id memory cost (4 MiB vs 19 MiB) for memory-constrained device
# hosts — an iOS Network Extension under the Jetsam per-process ceiling, where a
# single 19 MiB hash can exceed the whole budget. Trades brute-force resistance
# for footprint; only for single-user device builds. NOTE: changes the key-
# encryption KDF, so a lean build and a default build are not key-compatible.
lean-auth = []

# In-process HTTP host for on-device serving (iOS Network Extension). Pulls a
# minimal hyper 1.x stack and adds the tokio net/io features the accept loop
# needs. Off by default: the device-portable core has no server. See
# `src/server/mod.rs` and `examples/server_footprint.rs`.
embedded-server = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:bytes",
    "dep:futures-util",
    "dep:sha1",
    "tokio/net",
    "tokio/io-util",
]

[dev-dependencies]
tokio = { version = "1.52", features = ["full"] }
# Core's own tests use open_in_memory (NamedTempFile). The `testing` feature
# re-exposes that to downstream test suites via the optional dep above; here we
# need it unconditionally so `cargo test -p stelyph-core` compiles standalone.
tempfile = "3"
# peak RSS for examples/server_footprint.rs (getrusage; compiles everywhere).
libc = "0.2"

# phys_footprint (the exact iOS Jetsam metric) for examples/server_footprint.rs is a
# macOS/iOS-only mach API. Gate the dep to Apple targets so `cargo test --workspace`
# builds on Linux CI — mach2 fails to compile off Apple. (The example itself is
# `required-features = ["embedded-server"]`, so it isn't built in the default test run.)
[target.'cfg(target_vendor = "apple")'.dev-dependencies]
mach2 = "0.4"

[[example]]
name = "server_footprint"
required-features = ["embedded-server"]

# wasm32 has no OS entropy source and no thread pool. `getrandom`/`uuid` both
# need to be told to reach for the JS crypto API instead; without these two the
# build fails at compile time with a `compile_error!` from each crate.
#
# Target-gated, so no other build sees them. Blocking work is handled separately
# by `crate::task::run_blocking`, which runs inline here because a Workers
# isolate is single-threaded.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }
